adding tags to the swagger.json
